test/types/records/init/record-with-record-param.good
record-with-record-param.chpl:4: error: 'r' is not of a supported param type
