test/types/records/init/record-with-record-param.chpl
record R { }

record RR {
  param r:R;
  proc init() {}
}

var rr = new RR();
writeln(rr);
